[Monitoring][S][D]: data-flow monthly rollup retention 추가
